java/target/generated-sources/java/com/springrts/unitsync/impl/jna/UnitsyncLibrary.java

	@java.lang.Deprecated 
	public static native void SetSpringConfigString(Pointer name, Pointer value);
	public static native void SetSpringConfigString(java.lang.String name, java.lang.String value);
	@java.lang.Deprecated 
	public static native void SetSpringConfigInt(Pointer name, int value);
	public static native void SetSpringConfigInt(java.lang.String name, int value);
	@java.lang.Deprecated 
	public static native void SetSpringConfigFloat(Pointer name, float value);
	public static native void SetSpringConfigFloat(java.lang.String name, float value);
	public static native void lpClose();
	@java.lang.Deprecated 
	public static native int lpOpenFile(Pointer fileName, Pointer fileModes, Pointer accessModes);
	public static native int lpOpenFile(java.lang.String fileName, java.lang.String fileModes, java.lang.String accessModes);
	@java.lang.Deprecated 
	public static native int lpOpenSource(Pointer source, Pointer accessModes);
	public static native int lpOpenSource(java.lang.String source, java.lang.String accessModes);
	public static native int lpExecute();
	public static native java.lang.String lpErrorLog();
	public static native void lpAddTableInt(int key, int override);
	@java.lang.Deprecated 
	public static native void lpAddTableStr(Pointer key, int override);
	public static native void lpAddTableStr(java.lang.String key, int override);
	public static native void lpEndTable();
	public static native void lpAddIntKeyIntVal(int key, int value);
	@java.lang.Deprecated 
	public static native void lpAddStrKeyIntVal(Pointer key, int value);
	public static native void lpAddStrKeyIntVal(java.lang.String key, int value);
	public static native void lpAddIntKeyBoolVal(int key, int value);
	@java.lang.Deprecated 
	public static native void lpAddStrKeyBoolVal(Pointer key, int value);
	public static native void lpAddStrKeyBoolVal(java.lang.String key, int value);
	public static native void lpAddIntKeyFloatVal(int key, float value);
	@java.lang.Deprecated 
	public static native void lpAddStrKeyFloatVal(Pointer key, float value);
	public static native void lpAddStrKeyFloatVal(java.lang.String key, float value);
	@java.lang.Deprecated 
	public static native void lpAddIntKeyStrVal(int key, Pointer value);
	public static native void lpAddIntKeyStrVal(int key, java.lang.String value);
	@java.lang.Deprecated 
	public static native void lpAddStrKeyStrVal(Pointer key, Pointer value);
	public static native void lpAddStrKeyStrVal(java.lang.String key, java.lang.String value);
	public static native int lpRootTable();
	@java.lang.Deprecated 
	public static native int lpRootTableExpr(Pointer expr);
	public static native int lpRootTableExpr(java.lang.String expr);
	public static native int lpSubTableInt(int key);
	@java.lang.Deprecated 
	public static native int lpSubTableStr(Pointer key);
	public static native int lpSubTableStr(java.lang.String key);
	@java.lang.Deprecated 
	public static native int lpSubTableExpr(Pointer expr);
	public static native int lpSubTableExpr(java.lang.String expr);
	public static native void lpPopTable();
	public static native int lpGetKeyExistsInt(int key);
	@java.lang.Deprecated 
	public static native int lpGetKeyExistsStr(Pointer key);
	public static native int lpGetKeyExistsStr(java.lang.String key);
	public static native int lpGetIntKeyType(int key);
	@java.lang.Deprecated 
	public static native int lpGetStrKeyType(Pointer key);
	public static native int lpGetStrKeyType(java.lang.String key);
	public static native int lpGetIntKeyListCount();
	public static native int lpGetIntKeyListEntry(int index);
	public static native int lpGetStrKeyListCount();
	public static native java.lang.String lpGetStrKeyListEntry(int index);
	public static native int lpGetIntKeyIntVal(int key, int defValue);
	@java.lang.Deprecated 
	public static native int lpGetStrKeyIntVal(Pointer key, int defValue);
	public static native int lpGetStrKeyIntVal(java.lang.String key, int defValue);
	public static native int lpGetIntKeyBoolVal(int key, int defValue);
	@java.lang.Deprecated 
	public static native int lpGetStrKeyBoolVal(Pointer key, int defValue);
	public static native int lpGetStrKeyBoolVal(java.lang.String key, int defValue);
	public static native float lpGetIntKeyFloatVal(int key, float defValue);
	@java.lang.Deprecated 
	public static native float lpGetStrKeyFloatVal(Pointer key, float defValue);
	public static native float lpGetStrKeyFloatVal(java.lang.String key, float defValue);
	@java.lang.Deprecated 
	public static native java.lang.String lpGetIntKeyStrVal(int key, Pointer defValue);
	public static native java.lang.String lpGetIntKeyStrVal(int key, java.lang.String defValue);
	@java.lang.Deprecated 
	public static native java.lang.String lpGetStrKeyStrVal(Pointer key, Pointer defValue);
	public static native java.lang.String lpGetStrKeyStrVal(java.lang.String key, java.lang.String defValue);
}
